# speedtest-cli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.template  LICENSE  Makefile  README.md  buildx  buildx.sh  entrypoint.sh  go.mod  main.go  speedtest  speedtest.c  update.sh
Dockerfiles/: Dockerfile.builder  Dockerfile.template
scripts/: colors.sh  help.sh  main.sh  make.sh
src/: .dockerignore  Makefile  main.rs  speedtest.c  speedtest.h
