[package]
edition = "2021"
name = "speedtest-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
default-features = false
features = ["rustls-tls", "blocking"]
version = "*"

[dependencies.tar]
default-features = false
version = "*"

[dependencies.flate2]
version = "*"

[profile.release]
lto = true        # Enable Link Time Optimization (LTO).
panic = "abort"   # Abort on Panic.
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization.
